talos-cluster/flux/apps/ocidex-ci/eventlistener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ocidex-eventlistener
    namespace: ocidex-ci
    annotations:
        tailscale.com/funnel: "true"
spec:
    ingressClassName: tailscale
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: el-ocidex-github-listener
                            port:
                                number: 8080
    tls:
        - hosts:
              - ocidex-eventlistener
